--- a/style.css
+++ b/style.css
@@ -1,81 +1,92 @@
+/* Set global styles */
 body {
-	font-family: Arial, sans-serif;
-	background-color: #f2f2f2;
-  }
-  
-  .container {
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 20px;
-  }
-  
-  .header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: #333;
-	color: #fff;
-	padding: 10px;
-  }
-  
-  .header h1 {
-	font-size: 32px;
-	margin: 0;
-  }
-  
-  .current-message-section {
-	background-color: #fff;
-	padding: 20px;
-	margin-bottom: 20px;
-	border-radius: 5px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .saved-message-section {
-	background-color: #fff;
-	padding: 20px;
-	border-radius: 5px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	overflow-y: scroll;
-	max-height: 350px;
-  }
-  
-  .saved-message-section h2 {
-	font-size: 24px;
-	margin-bottom: 10px;
-  }
-  
-  .btn {
-	background-color: #333;
-	color: #fff;
-	border: none;
-	border-radius: 5px;
-	padding: 10px 20px;
-	font-size: 16px;
-	cursor: pointer;
-	margin-right: 10px;
-	transition: background-color 0.3s ease;
-	margin-bottom: 20px;
-  }
-  
-  .btn:hover {
-	background-color: #555;
-  }
-  
-  .btn-delete {
-	background-color: #ff6961;
-	color: #fff;
-	border: none;
-	border-radius: 5px;
-	padding: 10px 20px;
-	font-size: 16px;
-	cursor: pointer;
-	margin-right: 10px;
-	transition: background-color 0.3s ease;
-	margin-bottom: 5px;
-  }
-  
-  .btn-delete:hover {
-	background-color: #ff867f;
-  }
-  
+  font-family: 'Helvetica Neue', sans-serif;
+  background-color: #f7f7f7;
+  color: #333;
+}
+
+/* Set container styles */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Set header styles */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.header h1 {
+  font-size: 32px;
+  margin: 0;
+}
+
+/* Set current message section styles */
+.current-message-section {
+  background-color: #fff;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Set saved message section styles */
+.saved-message-section {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow-y: scroll;
+  max-height: 350px;
+}
+
+.saved-message-section h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+/* Set button styles */
+.btn {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: background-color 0.3s ease;
+  margin-bottom: 20px;
+}
+
+.btn:hover {
+  background-color: #555;
+}
+
+/* Set delete button styles */
+.btn-delete {
+  background-color: #ff6961;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: background-color 0.3s ease;
+  margin-bottom: 5px;
+}
+
+.btn-delete:hover {
+  background-color: #ff867f;
+  color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transform: translateY(-1px);
+}
